--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,29 @@
+body {
+  background-color: black;
+  color: white;
+}
+
+p {
+  font-weight: bold;
+}
+
+a {
+  position: absolute;
+  background-color: black;
+  top: 352px;
+  left: 58px;
+  font-size: 24px;
+}
+
+a:visited {
+  color: white;
+}
+
 #image {
   display: block;
   margin: auto;
+  height: 500px;
+  width: 500px;
 }
 
 #dialog-box {
